--- a/index.html
+++ b/index.html
@@ -2,10 +2,50 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página</title>
+    <title>Menú Principal - Francisco Lombardo</title>
 </head>
-<body>
-    <h1>Bienvenido a mi sitio</h1>
+<body bgcolor="#0A3D62" text="#FFFFFF">
+    <center>
+        <h1 style="color:#F1C40F;">Menú Principal - Francisco Lombardo</h1>
+        <h3>Selecciona una página para visitar:</h3>
+
+        <table border="0" cellpadding="10" cellspacing="10">
+            <tr>
+                <td>
+                    <form action="pagina1.html" target="_blank">
+                        <input type="submit" value="Entrar a Página 1 - Sobre mí" style="background-color:#F1C40F; color:#0A3D62; font-weight:bold; padding:10px; border:none;">
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <form action="pagina2.html" target="_blank">
+                        <input type="submit" value="Entrar a Página 2 - Galería de productos" style="background-color:#F1C40F; color:#0A3D62; font-weight:bold; padding:10px; border:none;">
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <form action="pagina3.html" target="_blank">
+                        <input type="submit" value="Entrar a Página 3 - Artículos" style="background-color:#F1C40F; color:#0A3D62; font-weight:bold; padding:10px; border:none;">
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <form action="pagina4.html" target="_blank">
+                        <input type="submit" value="Entrar a Página 4 - Proyecto" style="background-color:#F1C40F; color:#0A3D62; font-weight:bold; padding:10px; border:none;">
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <form action="pagina5.html" target="_blank">
+                        <input type="submit" value="Entrar a Página 5 - Mis libros favoritos" style="background-color:#F1C40F; color:#0A3D62; font-weight:bold; padding:10px; border:none;">
+                    </form>
+                </td>
+            </tr>
+        </table>
+    </center>
 </body>
-</html>   
+</html>
